--- a/templates/base.html.twig
+++ b/templates/base.html.twig
@@ -1,19 +1,26 @@
 <!DOCTYPE html>
 <html>
-    <head>
-        <meta charset="UTF-8">
-        <title>{% block title %}Welcome!{% endblock %}</title>
-        {# Run `composer require symfony/webpack-encore-bundle`
-           and uncomment the following Encore helpers to start using Symfony UX #}
-        {% block stylesheets %}
-            {#{{ encore_entry_link_tags('app') }}#}
-        {% endblock %}
+<head>
+    <meta charset="UTF-8">
+    <title>{% block title %}Welcome!{% endblock %}</title>
 
-        {% block javascripts %}
-            {#{{ encore_entry_script_tags('app') }}#}
-        {% endblock %}
-    </head>
-    <body>
-        {% block body %}{% endblock %}
-    </body>
+    {% block stylesheets %}
+        {{ encore_entry_link_tags('tailwind') }}
+    {% endblock %}
+
+
+</head>
+
+<body class="min-h-screen bg-gray-100">
+
+<div id="app">
+
+</div>
+
+
+{% block javascripts %}
+    {{ encore_entry_script_tags('app') }}
+
+{% endblock %}
+</body>
 </html>
